fix: Solved task 4 by streams!